syntax = "proto3";

// Coin defines a token with a denomination and an amount.
//
// NOTE: The amount field is an Int which implements the custom method
// signatures required by gogoproto.
message Coin {
  string denom  = 1;
  string amount = 2;
}

// MsgSubmitProposal defines an sdk.Msg type that supports submitting arbitrary
// proposal Content.
message MsgSubmitProposal {
  // content is the proposal's content.
  bytes content = 1;

  // initial_deposit is the deposit value that must be paid at proposal submission.
  repeated Coin initial_deposit = 2;

  // proposer is the account address of the proposer.
  string proposer = 3;
}

// MsgSubmitProposalResponse defines the Msg/SubmitProposal response type.
message MsgSubmitProposalResponse {
  // proposal_id defines the unique id of the proposal.
  uint64 proposal_id = 1;
}

// TextProposal defines a standard text proposal whose changes need to be
// manually updated in case of approval.
message TextProposal {
  
  // title of the proposal.
  string title = 1;

  // description associated with the proposal.
  string description = 2;
}
